[tool.poetry]
name = "scrapuu"
version = "0.1.0"
description = "Web Crawler to scrap pauu."
authors = ["png ssbot <ssbot.png@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
