[tool.poetry]
name = "scrapuu"
version = "0.1.0"
description = "Web Crawler to scrap pauu."
authors = ["png ssbot <ssbot.png@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.0.1"
flake8 = "^3.7.9"
mypy = "^0.770"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
